<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="8dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name" />
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/home_planet" />
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />
  </LinearLayout>

  <CheckBox
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/android_programmer" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/favorite_food" />
    <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />
  </LinearLayout>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/do_something" />

</LinearLayout>