<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dip"
    android:layout_marginStart="4dip"
    android:text="@string/url"
    app:layout_constraintBaseline_toBaselineOf="@+id/entry"
    app:layout_constraintStart_toStartOf="parent" />

  <EditText
    android:id="@id/entry"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/label"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/ok"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ok"
    app:layout_constraintEnd_toEndOf="@id/entry"
    app:layout_constraintTop_toBottomOf="@id/entry" />

  <Button
    android:id="@+id/cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    app:layout_constraintEnd_toStartOf="@id/ok"
    app:layout_constraintTop_toTopOf="@id/ok" />

</android.support.constraint.ConstraintLayout>
