<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/tableLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:stretchColumns="1">

  <TextView
    android:id="@+id/nameLabel"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="31dp"
    android:text="@string/name"
    app:layout_constraintEnd_toStartOf="@+id/name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:inputType="text"
    app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/labelBarrier" />

  <TextView
    android:id="@+id/planetLabel"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:text="@string/home_planet"
    app:layout_constraintBaseline_toBaselineOf="@+id/planet"
    app:layout_constraintEnd_toStartOf="@+id/planet"
    app:layout_constraintStart_toStartOf="parent" />

  <EditText
    android:id="@+id/planet"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/labelBarrier"
    app:layout_constraintTop_toBottomOf="@+id/name" />

  <CheckBox
    android:id="@+id/dev"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="11dp"
    android:text="@string/android_programmer"
    app:layout_constraintEnd_toEndOf="@+id/planet"
    app:layout_constraintStart_toEndOf="@+id/labelBarrier"
    app:layout_constraintTop_toBottomOf="@+id/planetLabel" />

  <TextView
    android:id="@+id/foodLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:text="@string/favorite_food"
    app:layout_constraintBaseline_toBaselineOf="@+id/food"
    app:layout_constraintEnd_toStartOf="@+id/food"
    app:layout_constraintStart_toStartOf="parent" />

  <EditText
    android:id="@+id/food"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/labelBarrier"
    app:layout_constraintTop_toBottomOf="@+id/dev" />

  <Button
    android:id="@+id/something"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/do_something"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/food" />

  <android.support.constraint.Barrier
    android:id="@+id/labelBarrier"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:barrierDirection="end"
    app:constraint_referenced_ids="nameLabel,planetLabel,foodLabel" />

</android.support.constraint.ConstraintLayout>